# NHL-vis

./: Analysis_writeup.html  Analysis_writeup.qmd  LICENSE.txt  NHL_scrape.py  README.md  _quarto.yml  analysis.py  cleaning.py  documentation.html  documentation.md  nhl_player_expanded.csv  nhl_players_cleaned.csv  nhl_skater_stats_2000_2024.csv  pyproject.toml  suggested_players.txt
docs/: Analysis_writeup.html  README.html  README.md  documentation.html  index.html  search.json
docs/site_libs/bootstrap/: bootstrap-61ea45dfd3f57471baf993c2ad8219a4.min.css  bootstrap-e4a8361a59e032a9b5ef315b3292c027.min.css  bootstrap-ebd9edb89cc30f9dc3cb87fa1e3df2b0.min.css
src/NHL-vis/: Summary.xlsx  core.py
src/nhl_vis_386/: __init__.py  core.py
