[build-system]
requires = ["uv_build >= 0.9.5, <0.10.0"]
build-backend = "uv_build"

[project]
name = "NHL-vis-386"
version = "0.1.0"
description = "Simple functions for obtaining and visualizing NHL data"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
]

[project.urls]
Homepage = "https://github.com/mcooperjay/NHL-vis"
Repository = "https://github.com/mcooperjay/NHL-vis.git"
Issues = "https://github.com/mcooperjay/NHL-vis/issues"
